--- a/clusters/home-lab/apps.yaml
+++ b/clusters/home-lab/apps.yaml
@@ -1,37 +1,14 @@
----
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: platform-metallb-config
+  name: platform
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/Ealoltm/k8s-gitops.git
     targetRevision: main
-    path: platform/metallb/base
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: metallb-system
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
-
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: platform-argocd
-  namespace: argocd
-spec:
-  project: default
-  source:
-    repoURL: https://github.com/Ealoltm/k8s-gitops.git
-    targetRevision: main
-    path: platform/argocd/base
+    path: platform
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
