--- a/platform/argocd/bootstrap.yaml
+++ b/platform/argocd/bootstrap.yaml
@@ -1,8 +1,7 @@
----
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: root-home-lab
+  name: home-lab-root
   namespace: argocd
 spec:
   project: default
