--- a/platform/metallb/base/metallb-config.yaml
+++ b/platform/metallb/base/metallb-config.yaml
@@ -1,19 +1,17 @@
----
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
-  name: kube-pool
+  name: default
   namespace: metallb-system
 spec:
   addresses:
     - 10.10.10.200-10.10.10.250
-
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
-  name: kube-l2adv
+  name: default
   namespace: metallb-system
 spec:
   ipAddressPools:
-    - kube-pool
+    - default
