--- a/apps/kustomization.yaml
+++ b/apps/kustomization.yaml
@@ -1,7 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: default
 resources:
-  - ./argocd
-  - ./metallb
-  - ./gateway-api
-  - ./ingress/cilium-gateway
+  - whoami/kustomization.yaml
