--- a/apps/whoami/kustomization.yaml
+++ b/apps/whoami/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./argocd
-  - ./metallb
-  - ./gateway-api
-  - ./ingress/cilium-gateway
+  - deployment.yaml
+  - service.yaml
+  - httproute.yaml
