--- a/platform/ingress/cilium-gateway/base/kustomization.yaml
+++ b/platform/ingress/cilium-gateway/base/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: cilium-gateway
 resources:
-  - ./argocd
-  - ./metallb
-  - ./gateway-api
-  - ./ingress/cilium-gateway
+  - gatewayclass.yaml
+  - gateway.yaml
