--- a/platform/gateway-api/base/gateway-api-application.yaml
+++ b/platform/gateway-api/base/gateway-api-application.yaml
@@ -12,7 +12,7 @@ spec:
   source:
     repoURL: https://github.com/kubernetes-sigs/gateway-api.git
     targetRevision: v1.0.0
-    path: config/crd
+    path: config/crd/kubernetes
   syncPolicy:
     automated:
       prune: true
