--- a/platform/gateway-api/base/gateway-api-application.yaml
+++ b/platform/gateway-api/base/gateway-api-application.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/kubernetes-sigs/gateway-api.git
     targetRevision: v1.0.0
-    path: config/crd/kubernetes
+    path: config/crd
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
