--- a/platform/ingress/cilium-gateway/application.yaml
+++ b/platform/ingress/cilium-gateway/application.yaml
@@ -5,13 +5,13 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  source:
-    repoURL: https://github.com/Ealoltm/k8s-gitops.git
-    targetRevision: main
-    path: platform/ingress/cilium-gateway
   destination:
     server: https://kubernetes.default.svc
     namespace: cilium-gateway
+  source:
+    repoURL: https://github.com/ealoltm/k8s-gitops.git
+    targetRevision: main
+    path: platform/ingress/cilium-gateway/base
   syncPolicy:
     automated:
       prune: true
